Bug 1100535 - Do not assume that the radio required status changed when the attribute changes. r=smaug